remove test images, switch to sample comics, implement isotope layout

--- a/_comics/3.md
+++ b/_comics/3.md
@@ -3,5 +3,5 @@ layout: comic
 title: A Test Comic Item
 id: 3
 slug: "3"
-image: "/images/test/sunset-clouds.jpg"
+image: "/images/comics/3.svg"
 ---
