--- a/_comics/4.md
+++ b/_comics/4.md
@@ -3,5 +3,5 @@ layout: comic
 title: A Test Comic Item
 id: 4
 slug: "4"
-image: "/images/test/didcot-power-station.jpg"
+image: "/images/comics/4.svg"
 ---
