implement comic descriptions/subtext

--- a/_comics/4.md
+++ b/_comics/4.md
@@ -5,3 +5,5 @@ hash: "000004"
 slug: "4"
 image: "/images/comics/6x3_comic.svg"
 ---
+
+This is some sample content. A description of the comic, if you like. Here is [a link](https://example.com/).
