--- a/_comics/1.md
+++ b/_comics/1.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000001"
 slug: "1"
-image: "/images/comics/8x2_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
