--- a/_comics/10.md
+++ b/_comics/10.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000010"
 slug: "10"
-image: "/images/comics/3x1_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
