--- a/_comics/11.md
+++ b/_comics/11.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000011"
 slug: "11"
-image: "/images/comics/5x1_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
