--- a/_comics/12.md
+++ b/_comics/12.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000012"
 slug: "12"
-image: "/images/comics/5x1_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
