--- a/_comics/14.md
+++ b/_comics/14.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000014"
 slug: "14"
-image: "/images/comics/8x2_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
