--- a/_comics/2.md
+++ b/_comics/2.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000002"
 slug: "2"
-image: "/images/comics/6x2_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
