--- a/_comics/4.md
+++ b/_comics/4.md
@@ -3,7 +3,18 @@ layout: comic
 title: A Test Comic Item
 hash: "000004"
 slug: "4"
-image: "/images/comics/6x3_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
 
 This is some sample content. A description of the comic, if you like. Here is [a link](https://example.com/).
