--- a/_comics/5.md
+++ b/_comics/5.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000005"
 slug: "5"
-image: "/images/comics/2x7_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
