--- a/_comics/7.md
+++ b/_comics/7.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000007"
 slug: "7"
-image: "/images/comics/5x2_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
