--- a/_comics/9.md
+++ b/_comics/9.md
@@ -3,5 +3,16 @@ layout: comic
 title: A Test Comic Item
 hash: "000009"
 slug: "9"
-image: "/images/comics/3x1_comic.svg"
+images: 
+  - "/images/test/title.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
+  - "/images/test/comic.svg"
 ---
