add sample comic 1

--- a/_comics/1.md
+++ b/_comics/1.md
@@ -4,15 +4,12 @@ title: A Test Comic Item
 hash: "000001"
 slug: "1"
 images: 
-  - "/images/test/title.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
-  - "/images/test/comic.svg"
+  - "/images/comics/1/1.png"
+  - "/images/comics/1/2.png"
+  - "/images/comics/1/3.png"
+  - "/images/comics/1/4.png"
+  - "/images/comics/1/5.png"
+  - "/images/comics/1/6.png"
+  - "/images/comics/1/7.png"
+  - "/images/comics/1/8.png"
 ---
