fix comics syntax

--- a/_comics/4.md
+++ b/_comics/4.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000004"
-slug: "4"
+hash: '000004'
+slug: 4
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
