--- a/_comics/7.md
+++ b/_comics/7.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000007"
-slug: "7"
+hash: '000007'
+slug: 7
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
