--- a/_comics/8.md
+++ b/_comics/8.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000008"
-slug: "8"
+hash: '000008'
+slug: 8
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
