--- a/_comics/10.md
+++ b/_comics/10.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000010"
-slug: "10"
+hash: '000010'
+slug: 10
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
