--- a/_comics/11.md
+++ b/_comics/11.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000011"
-slug: "11"
+hash: '000011'
+slug: 11
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
