--- a/_comics/2.md
+++ b/_comics/2.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000002"
-slug: "2"
+hash: '000002'
+slug: 2
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
