--- a/_comics/5.md
+++ b/_comics/5.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
 title: A Test Comic Item
-hash: "000005"
-slug: "5"
+hash: '000005'
+slug: 5
 images: 
   - "/images/test/title.svg"
   - "/images/test/comic.svg"
