refactor attribute names for sorting/etc

--- a/_comics/000001.md
+++ b/_comics/000001.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
-title: Philadelphian Born US Citizen Nearly Deported by ICE
-hash: '000001'
-slug: 1
+name: Philadelphian Born US Citizen Nearly Deported by ICE
+title: '000001'
+number: 1
 images:
 - "/images/comics/1/1.png"
 - "/images/comics/1/2.png"
