--- a/_pages/1.md
+++ b/_pages/1.md
@@ -1,8 +1,8 @@
 ---
 layout: page
-grid: 0
-title: Page 1
-hash: "000001"
-slug: "1"
+grid: 1
+title: "000001"
+name: "Page 1"
+number: "1"
 start: 1
 ---
