--- a/_comics/000002.md
+++ b/_comics/000002.md
@@ -1,8 +1,8 @@
 ---
 layout: comic
-title: 'Korean Ice '
-slug: 2
-hash: '000002'
+name: 'Korean Ice '
+number: 2
+title: '000002'
 images:
 - "/images/comics/np1.jpg"
 - "/images/comics/np2.jpg"
