switch to page-title and page-desc attributes

--- a/_comics/000001.md
+++ b/_comics/000001.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: Philadelphian Born US Citizen Nearly Deported by ICE
+page-title: Philadelphian Born US Citizen Nearly Deported by ICE
+page-desc: ''
 title: '000001'
 number: 1
 images:
