--- a/_comics/000002.md
+++ b/_comics/000002.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: What Will Become of Britain?
+page-title: What Will Become of Britain?
+page-desc: ''
 number: 2
 title: '000002'
 images:
