--- a/_comics/000003.md
+++ b/_comics/000003.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: 'Korean Ice '
+page-title: 'Korean Ice Skating Scandal'
+page-desc: ''
 number: 3
 title: '000003'
 images:
