--- a/_comics/000004.md
+++ b/_comics/000004.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: The Crypto Rollercoaster
+page-title: The Crypto Rollercoaster
+page-desc: ''
 number: "4"
 title: '000004'
 images:
