--- a/_comics/000005.md
+++ b/_comics/000005.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: The World's Largest Election Ever- What Is At Stake?
+page-title: The World's Largest Election Ever- What Is At Stake?
+page-desc: ''
 number: 5
 title: '000005'
 images:
