--- a/_comics/000006.md
+++ b/_comics/000006.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: Alleged Illegal Immigrant Charged With Four Murders
+page-title: Alleged Illegal Immigrant Charged With Four Murders
+page-desc: ''
 number: 6
 title: '000006'
 images:
