--- a/_comics/000007.md
+++ b/_comics/000007.md
@@ -1,6 +1,7 @@
 ---
 layout: comic
-name: Indian Sea Turtle Populations are Regenerating
+page-title: Indian Sea Turtle Populations are Regenerating
+page-desc: ''
 number: "7"
 title: '000007'
 images:
