--- a/_comics/000001.md
+++ b/_comics/000001.md
@@ -1,15 +1,16 @@
 ---
 layout: comic
-name: As Brexit Deal Sours Trump Offers Johnson Help
-number: "3"
-title: '000003'
+name: EU Places Pressure on Brazil Over Amazon Fires
+number: "1"
+title: '000001'
 images:
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-1.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-2.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-3.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-4.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-5.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-6.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-7.png"
+- "/images/comics/2019/09/06/Panel_01-1.jpg"
+- "/images/comics/2019/09/06/Panel_02 (1).jpg"
+- "/images/comics/2019/09/06/Panel_03.jpg"
+- "/images/comics/2019/09/06/Panel_04.jpg"
+- "/images/comics/2019/09/06/Panel_05.jpg"
+- "/images/comics/2019/09/06/Panel_07.jpg"
+- "/images/comics/2019/09/06/Panel_06.jpg"
+- "/images/comics/2019/09/06/Panel_08.jpg"
 
 ---
