--- a/_comics/000002.md
+++ b/_comics/000002.md
@@ -1,14 +1,16 @@
 ---
 layout: comic
-name: What Will Become of Britain?
-number: "4"
-title: '000004'
+name: Untitled Comic
+number: "2"
+title: '000002'
 images:
-- "/images/comics/2019/05/04/PG 1 .jpg"
-- "/images/comics/2019/05/04/pg 2.jpg"
-- "/images/comics/2019/05/04/pg 4.jpg"
-- "/images/comics/2019/05/04/pg 6.jpg"
-- "/images/comics/2019/05/04/pg 7.jpg"
-- "/images/comics/2019/05/04/pg 8.jpg"
+- "/images/comics/2019/09/07/page 1.jpg"
+- "/images/comics/2019/09/07/page 2.jpg"
+- "/images/comics/2019/09/07/page 3.jpg"
+- "/images/comics/2019/09/07/page 4.jpg"
+- "/images/comics/2019/09/07/page 5.jpg"
+- "/images/comics/2019/09/07/page 6.jpg"
+- "/images/comics/2019/09/07/page 7.jpg"
+- "/images/comics/2019/09/07/page 8.jpg"
 
 ---
