--- a/_comics/000004.md
+++ b/_comics/000004.md
@@ -1,18 +1,14 @@
 ---
 layout: comic
-name: The Crypto Rollercoaster
-number: "6"
-title: '000006'
+name: What Will Become of Britain?
+number: "4"
+title: '000004'
 images:
-- "/images/comics/2019/05/16/bitcoin.1.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.2.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.3.1-1.jpg"
-- "/images/comics/2019/05/16/bitcoin.4.1-1.jpg"
-- "/images/comics/2019/05/16/bitcoin.5.1-2.jpg"
-- "/images/comics/2019/05/16/bitcoin.6.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.7.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.8.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.9.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.10.1-1.jpg"
+- "/images/comics/2019/05/04/PG 1 .jpg"
+- "/images/comics/2019/05/04/pg 2.jpg"
+- "/images/comics/2019/05/04/pg 4.jpg"
+- "/images/comics/2019/05/04/pg 6.jpg"
+- "/images/comics/2019/05/04/pg 7.jpg"
+- "/images/comics/2019/05/04/pg 8.jpg"
 
 ---
