renaming comics folders to fix links

--- a/_comics/000012.md
+++ b/_comics/000012.md
@@ -1,17 +1,12 @@
 ---
 layout: comic
-name: 'Hong Kong protests: Unrest spread to MTR'
-number: "2"
-title: '000002'
+name: Indian Sea Turtle Populations are Regenerating
+number: "12"
+title: '000012'
 images:
-- "/images/comics/2019/09/25/mtr 1.jpg"
-- "/images/comics/2019/09/25/mtr 2.jpg"
-- "/images/comics/2019/09/25/mtr 3.jpg"
-- "/images/comics/2019/09/25/mtr 4.jpg"
-- "/images/comics/2019/09/25/mtr 5.jpg"
-- "/images/comics/2019/09/25/mtr 6.jpg"
-- "/images/comics/2019/09/25/mtr 7.jpg"
-- "/images/comics/2019/09/25/mtr 8.jpg"
-- "/images/comics/2019/09/25/mtr 9.jpg"
+- "/images/comics/2019/05/18/panel 1.jpg"
+- "/images/comics/2019/05/18/panel 2.jpg"
+- "/images/comics/2019/05/18/panel 3.jpg"
+- "/images/comics/2019/05/18/panel 4.jpg"
 
 ---
