--- a/_comics/000001.md
+++ b/_comics/000001.md
@@ -1,15 +1,20 @@
 ---
 layout: comic
-name: As Brexit Deal Sours Trump Offers Johnson Help
-number: "6"
-title: '000006'
+name: 'Hong Kong protests: Police fire tear gas after storming shopping mall'
+number: "1"
+title: '000001'
 images:
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-1.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-2.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-3.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-4.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-5.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-6.png"
-- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-7.png"
+- "/images/comics/2019/09/25/pg 1.jpg"
+- "/images/comics/2019/09/25/pg 2.jpg"
+- "/images/comics/2019/09/25/pg 3.jpg"
+- "/images/comics/2019/09/25/pg 4.jpg"
+- "/images/comics/2019/09/25/pg 5.jpg"
+- "/images/comics/2019/09/25/pg 6.jpg"
+- "/images/comics/2019/09/25/pg 7.jpg"
+- "/images/comics/2019/09/25/pg 8.jpg"
+- "/images/comics/2019/09/25/pg 9.jpg"
+- "/images/comics/2019/09/25/pg 10.jpg"
+- "/images/comics/2019/09/25/pg 11.jpg"
+- "/images/comics/2019/09/25/pg 12.jpg"
 
 ---
