--- a/_comics/000002.md
+++ b/_comics/000002.md
@@ -1,14 +1,17 @@
 ---
 layout: comic
-name: What Will Become of Britain?
-number: "7"
-title: '000007'
+name: 'Hong Kong protests: Unrest spread to MTR'
+number: "2"
+title: '000002'
 images:
-- "/images/comics/2019/05/04/PG 1 .jpg"
-- "/images/comics/2019/05/04/pg 2.jpg"
-- "/images/comics/2019/05/04/pg 4.jpg"
-- "/images/comics/2019/05/04/pg 6.jpg"
-- "/images/comics/2019/05/04/pg 7.jpg"
-- "/images/comics/2019/05/04/pg 8.jpg"
+- "/images/comics/2019/09/25/mtr 1.jpg"
+- "/images/comics/2019/09/25/mtr 2.jpg"
+- "/images/comics/2019/09/25/mtr 3.jpg"
+- "/images/comics/2019/09/25/mtr 4.jpg"
+- "/images/comics/2019/09/25/mtr 5.jpg"
+- "/images/comics/2019/09/25/mtr 6.jpg"
+- "/images/comics/2019/09/25/mtr 7.jpg"
+- "/images/comics/2019/09/25/mtr 8.jpg"
+- "/images/comics/2019/09/25/mtr 9.jpg"
 
 ---
