--- a/_comics/000007.md
+++ b/_comics/000007.md
@@ -1,12 +1,14 @@
 ---
 layout: comic
-name: Indian Sea Turtle Populations are Regenerating
-number: "12"
-title: '000012'
+name: What Will Become of Britain?
+number: "7"
+title: '000007'
 images:
-- "/images/comics/2019/05/18/panel 1.jpg"
-- "/images/comics/2019/05/18/panel 2.jpg"
-- "/images/comics/2019/05/18/panel 3.jpg"
-- "/images/comics/2019/05/18/panel 4.jpg"
+- "/images/comics/2019/05/04/PG 1 .jpg"
+- "/images/comics/2019/05/04/pg 2.jpg"
+- "/images/comics/2019/05/04/pg 4.jpg"
+- "/images/comics/2019/05/04/pg 6.jpg"
+- "/images/comics/2019/05/04/pg 7.jpg"
+- "/images/comics/2019/05/04/pg 8.jpg"
 
 ---
