remove news panels block 2 on hk mtr

--- a/_comics/000004.md
+++ b/_comics/000004.md
@@ -1,18 +1,16 @@
 ---
 layout: comic
-name: The Crypto Rollercoaster
-number: "8"
-title: '000008'
+name: Untitled Comic
+number: "4"
+title: '000004'
 images:
-- "/images/comics/2019/05/16/bitcoin.1.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.2.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.3.1-1.jpg"
-- "/images/comics/2019/05/16/bitcoin.4.1-1.jpg"
-- "/images/comics/2019/05/16/bitcoin.5.1-2.jpg"
-- "/images/comics/2019/05/16/bitcoin.6.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.7.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.8.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.9.1.jpg"
-- "/images/comics/2019/05/16/bitcoin.10.1-1.jpg"
+- "/images/comics/2019/09/07/page 1.jpg"
+- "/images/comics/2019/09/07/page 2.jpg"
+- "/images/comics/2019/09/07/page 3.jpg"
+- "/images/comics/2019/09/07/page 4.jpg"
+- "/images/comics/2019/09/07/page 5.jpg"
+- "/images/comics/2019/09/07/page 6.jpg"
+- "/images/comics/2019/09/07/page 7.jpg"
+- "/images/comics/2019/09/07/page 8.jpg"
 
 ---
