--- a/_comics/000002.md
+++ b/_comics/000002.md
@@ -1,14 +1,15 @@
 ---
 layout: comic
-name: What Will Become of Britain?
-number: "6"
-title: '000006'
+name: 'West Papua protests: Soldiers deployed, Internet access cut'
+number: "2"
+title: '000002'
 images:
-- "/images/comics/2019/05/04/PG 1 .jpg"
-- "/images/comics/2019/05/04/pg 2.jpg"
-- "/images/comics/2019/05/04/pg 4.jpg"
-- "/images/comics/2019/05/04/pg 6.jpg"
-- "/images/comics/2019/05/04/pg 7.jpg"
-- "/images/comics/2019/05/04/pg 8.jpg"
+- "/images/comics/2019/09/16/indonesiaprotest01.png"
+- "/images/comics/2019/09/16/indonesiaprotest02.png"
+- "/images/comics/2019/09/16/indonesiaprotest03.png"
+- "/images/comics/2019/09/16/indonesiaprotest04.png"
+- "/images/comics/2019/09/16/indonesiaprotest05.png"
+- "/images/comics/2019/09/16/indonesiaprotest06.png"
+- "/images/comics/2019/09/16/indonesiaprotest07.png"
 
 ---
