--- a/_comics/000008.md
+++ b/_comics/000008.md
@@ -1,15 +1,18 @@
 ---
 layout: comic
-name: Korean Ice
-number: "08"
+name: The Crypto Rollercoaster
+number: "8"
 title: '000008'
 images:
-- "/images/comics/np1 (1)-4.jpg"
-- "/images/comics/np2 (1)-4.jpg"
-- "/images/comics/np3 (2)-3.jpg"
-- "/images/comics/np4 (1)-3.jpg"
-- "/images/comics/np5 (1)-3.jpg"
-- "/images/comics/np6 (1)-3.jpg"
-- "/images/comics/np7 (1)-3.jpg"
-- "/images/comics/np8 (1)-3.jpg"
+- "/images/comics/2019/05/16/bitcoin.1.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.2.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.3.1-1.jpg"
+- "/images/comics/2019/05/16/bitcoin.4.1-1.jpg"
+- "/images/comics/2019/05/16/bitcoin.5.1-2.jpg"
+- "/images/comics/2019/05/16/bitcoin.6.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.7.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.8.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.9.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.10.1-1.jpg"
+
 ---
