--- a/_comics/000011.md
+++ b/_comics/000011.md
@@ -1,30 +1,12 @@
 ---
 layout: comic
-name: 'Hong Kong protests: Police fire tear gas after storming shopping mall'
-number: "1"
-title: '000001'
+name: Indian Sea Turtle Populations are Regenerating
+number: "11"
+title: '000011'
 images:
-- "/images/comics/2019/09/25/pg cover.jpg"
-- "/images/comics/2019/09/25/pg 1.jpg"
-- "/images/comics/2019/09/25/pg 2.jpg"
-- "/images/comics/2019/09/25/pg 3.jpg"
-- "/images/comics/2019/09/25/pg 4.jpg"
-- "/images/comics/2019/09/25/pg 5.jpg"
-- "/images/comics/2019/09/25/pg 6.jpg"
-- "/images/comics/2019/09/25/pg 7.jpg"
-- "/images/comics/2019/09/25/pg 8.jpg"
-- "/images/comics/2019/09/25/pg 9.jpg"
-- "/images/comics/2019/09/25/pg 10.jpg"
-- "/images/comics/2019/09/25/pg 11.jpg"
-- "/images/comics/2019/09/25/pg 12.jpg"
-- "/images/comics/2019/09/25/mtr 1.jpg"
-- "/images/comics/2019/09/25/mtr 2.jpg"
-- "/images/comics/2019/09/25/mtr 3.jpg"
-- "/images/comics/2019/09/25/mtr 4.jpg"
-- "/images/comics/2019/09/25/mtr 5.jpg"
-- "/images/comics/2019/09/25/mtr 6.jpg"
-- "/images/comics/2019/09/25/mtr 7.jpg"
-- "/images/comics/2019/09/25/mtr 8.jpg"
-- "/images/comics/2019/09/25/mtr 9.jpg"
+- "/images/comics/2019/05/18/panel 1.jpg"
+- "/images/comics/2019/05/18/panel 2.jpg"
+- "/images/comics/2019/05/18/panel 3.jpg"
+- "/images/comics/2019/05/18/panel 4.jpg"
 
 ---
