add new hk panels

--- a/_comics/000007.md
+++ b/_comics/000007.md
@@ -1,12 +1,15 @@
 ---
 layout: comic
-name: Indian Sea Turtle Populations are Regenerating
-number: "13"
-title: '000013'
+name: As Brexit Deal Sours Trump Offers Johnson Help
+number: "7"
+title: '000007'
 images:
-- "/images/comics/2019/05/18/panel 1.jpg"
-- "/images/comics/2019/05/18/panel 2.jpg"
-- "/images/comics/2019/05/18/panel 3.jpg"
-- "/images/comics/2019/05/18/panel 4.jpg"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-1.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-2.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-3.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-4.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-5.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-6.png"
+- "/images/comics/2019/09/07/trumpjohnsonbrexitdeal-7.png"
 
 ---
