--- a/_comics/000010.md
+++ b/_comics/000010.md
@@ -1,15 +1,18 @@
 ---
 layout: comic
-name: 'West Papua protests: Soldiers deployed, Internet access cut'
-number: "4"
-title: '000004'
+name: The Crypto Rollercoaster
+number: "10"
+title: '000010'
 images:
-- "/images/comics/2019/09/16/indonesiaprotest01.png"
-- "/images/comics/2019/09/16/indonesiaprotest02.png"
-- "/images/comics/2019/09/16/indonesiaprotest03.png"
-- "/images/comics/2019/09/16/indonesiaprotest04.png"
-- "/images/comics/2019/09/16/indonesiaprotest05.png"
-- "/images/comics/2019/09/16/indonesiaprotest06.png"
-- "/images/comics/2019/09/16/indonesiaprotest07.png"
+- "/images/comics/2019/05/16/bitcoin.1.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.2.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.3.1-1.jpg"
+- "/images/comics/2019/05/16/bitcoin.4.1-1.jpg"
+- "/images/comics/2019/05/16/bitcoin.5.1-2.jpg"
+- "/images/comics/2019/05/16/bitcoin.6.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.7.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.8.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.9.1.jpg"
+- "/images/comics/2019/05/16/bitcoin.10.1-1.jpg"
 
 ---
